// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Emoji 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "border": "1px solid #eee",
      "borderRadius": 3,
      "cursor": "pointer",
      "fontSize": 15,
      "margin": 10,
      "padding": "3px 10px",
    }
  }
  type="button"
>
  <span
    aria-label="so cool"
    role="img"
  >
    😀 😎 👍 💯
  </span>
</button>
`;

exports[`Storyshots Button Text 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "border": "1px solid #eee",
      "borderRadius": 3,
      "cursor": "pointer",
      "fontSize": 15,
      "margin": 10,
      "padding": "3px 10px",
    }
  }
  type="button"
>
  Hello Button
</button>
`;

exports[`Storyshots Player Bar Alt Icon States 1`] = `
<div
  className="player-box"
>
  <div
    className="now-playing__img"
  >
    <img
      src="American-Pie-Cover.png"
    />
  </div>
  <div
    className="now-playing__side"
  >
    <div
      className="now-playing__name"
    >
      <span
        title="American Pie"
      >
        American Pie
      </span>
    </div>
    <div
      className="now-playing__artist"
    >
      <span
        title="Don McClean"
      >
        Don McClean
      </span>
    </div>
  </div>
  <div
    className="box-controls"
  >
    <div>
      <button
        className="control-button icon-shuffle active"
        onClick={[Function]}
      />
      <button
        className="control-button icon-skip-back"
        onClick={[Function]}
      />
      <button
        className="control-button icon-play"
        onClick={[Function]}
      />
      <button
        className="control-button icon-skip-forward"
        onClick={[Function]}
      />
      <button
        className="control-button icon-repeat-context active"
        onClick={[Function]}
      />
    </div>
    <div
      className="progress"
    >
      <div
        className="progress__bar"
        style={
          Object {
            "width": "66.66666666666667%",
          }
        }
      />
    </div>
  </div>
  <div
    className="extended-controls"
  >
    <div
      className="volume-bar"
    >
      <button
        className="control-button icon-heart active"
        onClick={[Function]}
      />
      <button
        className="control-button icon-volume-off"
        onClick={[Function]}
      />
      <div
        className="progress-bar"
        onMouseUp={[Function]}
      >
        <div
          className="progress-bar-wrapper"
        >
          <div
            className="progress-bar-fg"
            style={
              Object {
                "width": "0%",
              }
            }
          />
          <input
            className="progress-bar-bg"
            defaultValue={0}
            max="100"
            min="0"
            onInput={[Function]}
            type="range"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Player Bar Default 1`] = `
<div
  className="player-box"
>
  <div
    className="now-playing__img"
  >
    <img
      src="American-Pie-Cover.png"
    />
  </div>
  <div
    className="now-playing__side"
  >
    <div
      className="now-playing__name"
    >
      <span
        title="American Pie"
      >
        American Pie
      </span>
    </div>
    <div
      className="now-playing__artist"
    >
      <span
        title="Don McClean"
      >
        Don McClean
      </span>
    </div>
  </div>
  <div
    className="box-controls"
  >
    <div>
      <button
        className="control-button icon-shuffle "
        onClick={[Function]}
      />
      <button
        className="control-button icon-skip-back"
        onClick={[Function]}
      />
      <button
        className="control-button icon-play"
        onClick={[Function]}
      />
      <button
        className="control-button icon-skip-forward"
        onClick={[Function]}
      />
      <button
        className="control-button icon-repeat-off"
        onClick={[Function]}
      />
    </div>
    <div
      className="progress"
    >
      <div
        className="progress__bar"
        style={
          Object {
            "width": "66.66666666666667%",
          }
        }
      />
    </div>
  </div>
  <div
    className="extended-controls"
  >
    <div
      className="volume-bar"
    >
      <button
        className="control-button icon-heart "
        onClick={[Function]}
      />
      <button
        className="control-button icon-volume"
        onClick={[Function]}
      />
      <div
        className="progress-bar"
        onMouseUp={[Function]}
      >
        <div
          className="progress-bar-wrapper"
        >
          <div
            className="progress-bar-fg"
            style={
              Object {
                "width": "60%",
              }
            }
          />
          <input
            className="progress-bar-bg"
            defaultValue={60}
            max="100"
            min="0"
            onInput={[Function]}
            type="range"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Player Bar No Track Info 1`] = `
<div
  className="player-box"
>
  <div
    className="now-playing__img"
  >
    <img
      src="defaultCoverArtUrl.png"
    />
  </div>
  <div
    className="now-playing__side"
  >
    <div
      className="now-playing__name"
    >
      <span
        title={null}
      >
        Cannot load playing track
      </span>
    </div>
    <div
      className="now-playing__artist"
    >
      <span
        title={null}
      >
        Media type is not supported
      </span>
    </div>
  </div>
  <div
    className="box-controls"
  >
    <div>
      <button
        className="control-button icon-shuffle "
        onClick={[Function]}
      />
      <button
        className="control-button icon-skip-back"
        onClick={[Function]}
      />
      <button
        className="control-button icon-play"
        onClick={[Function]}
      />
      <button
        className="control-button icon-skip-forward"
        onClick={[Function]}
      />
      <button
        className="control-button icon-repeat-off"
        onClick={[Function]}
      />
    </div>
    <div
      className="progress"
    >
      <div
        className="progress__bar"
        style={
          Object {
            "width": "66.66666666666667%",
          }
        }
      />
    </div>
  </div>
  <div
    className="extended-controls"
  >
    <div
      className="volume-bar"
    >
      <button
        className="control-button icon-heart "
        onClick={[Function]}
      />
      <button
        className="control-button icon-volume"
        onClick={[Function]}
      />
      <div
        className="progress-bar"
        onMouseUp={[Function]}
      >
        <div
          className="progress-bar-wrapper"
        >
          <div
            className="progress-bar-fg"
            style={
              Object {
                "width": "60%",
              }
            }
          />
          <input
            className="progress-bar-bg"
            defaultValue={60}
            max="100"
            min="0"
            onInput={[Function]}
            type="range"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Player Bar Overflow 1`] = `
<div
  className="player-box"
>
  <div
    className="now-playing__img"
  >
    <img
      src="American-Pie-Cover.png"
    />
  </div>
  <div
    className="now-playing__side"
  >
    <div
      className="now-playing__name"
    >
      <span
        title="In The Morning Of The Magician"
      >
        In The Morning Of The Magician
      </span>
    </div>
    <div
      className="now-playing__artist"
    >
      <span
        title="The Flaming Lipssssssssssssssssssssss"
      >
        The Flaming Lipssssssssssssssssssssss
      </span>
    </div>
  </div>
  <div
    className="box-controls"
  >
    <div>
      <button
        className="control-button icon-shuffle "
        onClick={[Function]}
      />
      <button
        className="control-button icon-skip-back"
        onClick={[Function]}
      />
      <button
        className="control-button icon-play"
        onClick={[Function]}
      />
      <button
        className="control-button icon-skip-forward"
        onClick={[Function]}
      />
      <button
        className="control-button icon-repeat-off"
        onClick={[Function]}
      />
    </div>
    <div
      className="progress"
    >
      <div
        className="progress__bar"
        style={
          Object {
            "width": "66.66666666666667%",
          }
        }
      />
    </div>
  </div>
  <div
    className="extended-controls"
  >
    <div
      className="volume-bar"
    >
      <button
        className="control-button icon-heart "
        onClick={[Function]}
      />
      <button
        className="control-button icon-volume"
        onClick={[Function]}
      />
      <div
        className="progress-bar"
        onMouseUp={[Function]}
      >
        <div
          className="progress-bar-wrapper"
        >
          <div
            className="progress-bar-fg"
            style={
              Object {
                "width": "60%",
              }
            }
          />
          <input
            className="progress-bar-bg"
            defaultValue={60}
            max="100"
            min="0"
            onInput={[Function]}
            type="range"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Player Controls Default 1`] = `
<div
  className="box-controls"
>
  <div>
    <button
      className="control-button icon-shuffle "
      onClick={[Function]}
    />
    <button
      className="control-button icon-skip-back"
      onClick={[Function]}
    />
    <button
      className="control-button icon-play"
      onClick={[Function]}
    />
    <button
      className="control-button icon-skip-forward"
      onClick={[Function]}
    />
    <button
      className="control-button icon-repeat-off"
      onClick={[Function]}
    />
  </div>
  <div
    className="progress"
  >
    <div
      className="progress__bar"
      style={
        Object {
          "width": "66.66666666666667%",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Player Controls Playing 1`] = `
<div
  className="box-controls"
>
  <div>
    <button
      className="control-button icon-shuffle "
      onClick={[Function]}
    />
    <button
      className="control-button icon-skip-back"
      onClick={[Function]}
    />
    <button
      className="control-button icon-pause"
      onClick={[Function]}
    />
    <button
      className="control-button icon-skip-forward"
      onClick={[Function]}
    />
    <button
      className="control-button icon-repeat-off"
      onClick={[Function]}
    />
  </div>
  <div
    className="progress"
  >
    <div
      className="progress__bar"
      style={
        Object {
          "width": "66.66666666666667%",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Welcome to Storybook 1`] = `
<article
  style={
    Object {
      "backgroundColor": "#fff",
      "color": "#000",
      "fontFamily": "\\"Helvetica Neue\\", Helvetica, \\"Segoe UI\\", Arial, freesans, sans-serif",
      "lineHeight": 1.4,
      "padding": 15,
    }
  }
>
  <h1>
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      src/stories
    </code>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample 
    <button
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottom": "1px solid #1474f3",
          "borderLeft": "none",
          "borderRight": "none",
          "borderTop": "none",
          "color": "#1474f3",
          "cursor": "pointer",
          "font": "inherit",
          "padding": 0,
          "paddingBottom": 2,
          "textDecoration": "none",
        }
      }
      type="button"
    >
      stories
    </button>
     for a component called 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      Button
    </code>
     stories located at 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      src/stories/1-Button.stories.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the 
    <a
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      style={
        Object {
          "borderBottom": "1px solid #1474f3",
          "color": "#1474f3",
          "paddingBottom": 2,
          "textDecoration": "none",
        }
      }
      target="_blank"
    >
      Writing Stories
    </a>
     section in our documentation.
  </p>
  <p
    style={
      Object {
        "opacity": 0.5,
      }
    }
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      .storybook/webpack.config.js
    </code>
     to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;
